# tetra-master

./: Cargo.toml  index.html  justfile  readme.md  tetra-master-gui-1e18541b546fe524.js  tetra-master-gui-1f0414332c8721e7.js  tetra-master-gui-33f57f5735ad1140.js  tetra-master-gui-351ed55ae116071.js  tetra-master-gui-3755550a215d9c28.js  tetra-master-gui-52e19f87d56298b9.js  tetra-master-gui-5a55955a65024b27.js  tetra-master-gui-5adcbb3cdb37b46b.js  tetra-master-gui-5e510e6a5c502a5b.js  tetra-master-gui-6447f4f4d6cc452e.js  tetra-master-gui-654f75e99bd3304d.js  tetra-master-gui-6fcf5283eaa7567.js  tetra-master-gui-7706e9ad65b73513.js  tetra-master-gui-7e10602263e6dba1.js  tetra-master-gui-8047e4f464ead506.js  tetra-master-gui-817c09f0aac6dd51.js  tetra-master-gui-827f5a15abdcc9bc.js  tetra-master-gui-8b4027ae6443b6f9.js  tetra-master-gui-8d48ba6b597f828f.js  tetra-master-gui-8d9f2f541b096a07.js  tetra-master-gui-8ee954d15fa2101d.js  tetra-master-gui-92ae1b1300f78d7.js  tetra-master-gui-942e941f1951d30.js  tetra-master-gui-94f0c1b8ee693a4.js  tetra-master-gui-97edf3a99d9b36a9.js  tetra-master-gui-9b5848339369f400.js  tetra-master-gui-a358d5a6c502ed6c.js  tetra-master-gui-a52e5730a96939ea.js  tetra-master-gui-b4dc15749668bc91.js  tetra-master-gui-b633992241a4cc69.js  tetra-master-gui-b8a71c74ff47a599.js  tetra-master-gui-ba6dd9c264fe45c4.js  tetra-master-gui-c3d2b803a8dbaa74.js  tetra-master-gui-d4408554d467f3a9.js  tetra-master-gui-da0abe36251eb828.js  tetra-master-gui-da392ae26e6f8e52.js  (+6 more)
drivers/: .gitignore  Cargo.toml
drivers/ai/: Cargo.toml  generate-interactions.py  improve-iai-output.py  justfile
drivers/ai/benches/: iai.rs
drivers/ai/src/: battle_system_probabilities.rs  expectiminimax_0_naive.rs  expectiminimax_1_simplify.rs  expectiminimax_2_ab_pruning.rs  expectiminimax_3_negamax.rs  expectiminimax_4_prob_cutoff.rs  expectiminimax_5_no_alloc_get_resolutions.rs  expectiminimax_6_reduce_cloned_data.rs  expectiminimax_7_refactor.rs  expectiminimax_8_logic_optimization.rs  hybrid_0_initial.rs  hybrid_1_simplify.rs  interactions.rs  lib.rs  logging.rs  logging_noop.rs  metrics.rs  monte_carlo_tree_search_0_naive.rs  monte_carlo_tree_search_1_optimization.rs  naive_expectiminimax.rs  naive_minimax.rs  random.rs  time.rs  win_probabilities.rs
drivers/core/: Cargo.toml  justfile
drivers/core/src/: command.rs  display.rs  driver.rs  lib.rs  random_setup.rs  response.rs  rng.rs
drivers/gui/: Cargo.toml  index.html  justfile
drivers/gui/.cargo/: config.toml
drivers/gui/assets/: alexandria.ttf.source
drivers/probability-scripts/: anydice.template  calc-deterministic-probs.py  calc-dice-probs.rs  calc-original-probs.rs  generate-code.py  generate-win-probabilities.py  justfile  print-table.py
drivers/tester/: Cargo.toml  justfile
impl-rust/: justfile
(+60 files in other folders)
