[workspace]
resolver = "2"
members = ["core", "ai", "tester", "gui"]

[workspace.dependencies]
anyhow = "1.0.61"
arrayvec = "0.7.2"
bevy = "0.9.0"
bevy_prototype_lyon = "0.7.1"
clap = { version = "4.0.11", features = ["derive"] }
crossterm = "0.25.0"
iai = "0.1.1"
log = "0.4.17"
nom = "7.1.1"
once_cell = "1.16.0"
owo-colors = "3.4.0"
pretty_assertions = "1.2.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
test-case = "2.2.1"
wasm-bindgen = "0.2.83"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
