[package]
name = "tetra-master-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
tetra-master-core = { path = "../core" }

anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
