[package]
name = "tetra-master-ai"
version = "0.1.0"
edition = "2021"

[features]
logging = []
metrics = []

[dependencies]
tetra-master-core = { path = "../core" }

anyhow = { workspace = true }
arrayvec = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = { workspace = true }

[dev-dependencies]
iai = { workspace = true }

[[bench]]
name = "iai"
harness = false
