[package]
name = "tetra-master-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
tetra-master-core = { path = "../core" }
tetra-master-ai = { path = "../ai" }

anyhow.workspace = true
bevy.workspace = true
bevy_prototype_lyon.workspace = true
clap.workspace = true
log.workspace = true
rand.workspace = true
